--- a/src/pages/Training/quiz.css
+++ b/src/pages/Training/quiz.css
@@ -28,6 +28,7 @@
   font-weight: 500;
   color: #333;
   text-align: left;
+
 }
 
 .quiz_table .ant-table-tbody > tr > td {
@@ -35,6 +36,7 @@
   color: #333;
   font-size: 14px;
   transition: 0.3s;
+  cursor: pointer;
 }
 
 
