--- a/src/pages/Allpeople/allpeople.css
+++ b/src/pages/Allpeople/allpeople.css
@@ -65,6 +65,8 @@
 .custom-table td {
   padding: 10px;
   height: 32px;
+  cursor: pointer;
+  
 }
 
 .table-cell {
@@ -169,6 +171,11 @@
   padding: 15px;
   text-align: left;
   font-size: 14px;
+
+}
+
+.employee-td{
+  cursor: pointer;
 }
 
 .employee-tr:nth-child(even) {
