--- a/src/pages/Timesheet/timesheet.css
+++ b/src/pages/Timesheet/timesheet.css
@@ -84,6 +84,10 @@
   padding: 15px;
 }
 
+.table_time .ant-table td {
+  cursor: pointer;
+}
+
 .timesheet_table_title {
   font-weight: 600;
   font-size: 20px;
@@ -148,11 +152,11 @@
   margin-top: 5px;
 }
 
-.legend_button{
+.legend_button {
   display: flex;
   align-items: center;
   gap: 20px;
-  margin-top:20px;
+  margin-top: 20px;
 }
 @media screen and (max-width: 600px) {
   .timesheet_date_wrapper {
@@ -239,6 +243,4 @@
     justify-content: center;
     align-items: center;
   }
-  
-  
 }
