--- a/src/pages/Training/feedback.css
+++ b/src/pages/Training/feedback.css
@@ -18,6 +18,7 @@
   margin: 0;
 }
 
+
 .year_text {
   font-weight: 500;
 }
@@ -32,6 +33,7 @@
   background: #fafafa;
   color: #333;
   font-size: 14px;
+  cursor: pointer;
 }
 
 .passed_table .ant-table-tbody > tr:nth-child(odd) > td {
