--- a/src/pages/Training/registration.css
+++ b/src/pages/Training/registration.css
@@ -53,6 +53,7 @@
   background: #fafafa;
   color: #333;
   font-size: 14px;
+  cursor: pointer;
 }
 
 .available_table .ant-table-tbody > tr:nth-child(odd) > td {
